Updated multithread logic for copying saved to use virtual threads and properly use Platform.runlater